# web_scraper

./: README.md  docker-compose-producer.yml  docker-compose-worker.yml  genenv.py  local.ini  mysql.yml  pyproject.toml  rabbitmq-network.yml  rabbitmq.yml  with.env.Dockerfile
scraper/: config.py  producer.py  producer_104_scraper_print.py  producer_multi_queue.py  producer_test.py  tasks_104_scraper.py  tasks_cake_scraper.py  worker.py  worker_upload_mysql.py
