[project]
name = "web-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "celery>=5.6.3",
    "flask==3.1.0",
    "loguru>=0.7.3",
    "pandas>=3.0.3",
    "pymysql>=1.2.0",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.50",
]
